--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,28 @@ dependencies:
   google_sign_in: ^5.0.5
   flutter_secure_storage: ^4.2.0
   cloud_firestore: ^2.4.0
+  shared_preferences:
+  fluttertoast: 8.0.6
+  image_picker: 0.8.2
+  firebase_storage: 8.0.5
+  images_picker:
+  dash_chat: ^1.1.15
+  cached_network_image: ^3.1.0
+  intl: ^0.17.0
+  firebase_messaging:
+  flutter_local_notifications: ^7.0.0
+  google_fonts: ^2.1.0
+  http: ^0.13.3
+  story_view: ^0.13.1
+  flutter_map: ^0.13.1
+  timeline_tile: ^2.0.0
+  photo_view: ^0.12.0
+  auto_size_text:
+  font_awesome_flutter:
+  geolocator:
+  page_transition:
+  timeago:
+  url_launcher:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
