--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  survey_kit: ^0.0.11
 
 dev_dependencies:
   flutter_test:
@@ -38,6 +39,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+
+  plugin:
+    platforms:
+      android:
+        package: com.quickbirdstudios.surveykit
+        pluginClass: SurveyKitPlugin
+      ios:
+        pluginClass: SurveyKitPlugin
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
